对user增加增删改方法

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,11 @@ spring.datasource.testOnReturn=false
 # 打开PSCache，并且指定每个连接上PSCache的大小
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+# 配置监控统计拦截的filters，这些为相应filter的别名，去掉stat后监控界面sql无法统计，'wall'用于防火墙,config用于数据库密码加密
 spring.datasource.filters=stat,wall,config
+# 这里log4j起不来，提示找不但这个jar
+# spring.datasource.druid.filter.commons-log.connection-logger-name=stat,wall,log4j,config
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000;config.decrypt=true;config.decrypt.key=${public-key}
+# 合并多个DruidDataSource的监控数据 true为合并 false为不合并
+# useGlobalDataSourceStat: true
